Fixed wrong or inconsistent style of text for most dialogs.

Removed Goblin Berries and Pepper bags from ambient inventories.
Removed option to discuss joining the mercenaries once part of any guild for Alvares, Raoul, Wolf.
Removed option to discuss rent after completing related quest for Onar, Sekob.
Removed visual transforming to Seekers of possessed NPCs.


	NPCs Traders

All traders no longer equip their best weapons if they already have one of that type equipped.
Cronos does not sell Pitch, Sulfur, Tongues of Fire, fire runebooks or any fire spell scrolls, he has some more ice/water spell scrolls for sale.
Matteo only sells his leather armor until beginning of chapter 3, dialogue adjusted accordingly.
Samuel gets a ring he was supposed to have in his trade inventory.
Traders only sells blank rune stones for novices/mages.
Zuris sells an Elixir of Strength in Chapter 3 and Elixir of Dexterity in Chapter 2 instead of 3.


	NPCs Specific

Agon ends the dialog after answering to "how's it going".
Akil always notices return of Telbor and/or Tonak.
Akil can die during his fight with the mercenaries.
Akil can only be asked about Onar's farm if NH is not a mercenary or dragon hunter.
Akil can only be asked about the missing people if they have not been returned yet.
Akil initiates the dialog for returning the sheep, as NH has no good dialog opener there.
Akil's sheep always returns to the bandit cave if NH gets too far from her.
Akil's sheep dialog has options to tell the sheep to wait and "END".
Akil's sheep stays at his farm once brought there, instead of going back to the bandit cave.
Alligator Jack gives previously unused item Swamprat meat for his delivery quest.
Alligator Jack only takes meat from Swamprats.
Alvares noticing a pick pocket attempt causes the fight with the farmers to start.
Alwin is asked about buying a sheep if NH is looking for a sheep for the monastery.
Alwin vocally disapproves murdering of Fellan and will remember the crime.